[gd_scene load_steps=3 format=3 uid="uid://cwmhwsq6osioh"]

[ext_resource type="Script" uid="uid://c7h3umvlx8r00" path="res://Framework/Clases/celda_planta.gd" id="1_fp8yu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3dx4"]
size = Vector2(30, 35)

[node name="CeldaPlanta" type="Area2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_fp8yu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p3dx4")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
